--- a/src/ChatPanel.css
+++ b/src/ChatPanel.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   align-items: flex-end;
   justify-content: flex-end;
-  padding: 0;
+  padding: 0 32px 32px 0;
   box-sizing: border-box;
 }
 
